# initializer

./: CMakeLists.txt  README.md  config.yaml  go.mod  initfile.yaml  local-build.cmd  main.go
src/: main.cpp
test/: CMakeLists.txt  initfile.yaml
